# FactoryMind

./: .services.json  AI_PLAN.md  GETTING_STARTED.md  Makefile  README.md  TOOLS.md  Tiltfile  atlantis.yaml  docker-compose.override.yml  docker-compose.yml  lighthouserc.js  skaffold.yaml
analytics/: README.md
api-management/: README.md
api-testing/: README.md
backstage/: README.md  app-config.yaml  catalog-info.yaml  plugins.yaml  tech-radar.json
chaos/: README.md
ci/: README.md
data-lineage/: README.md
data-quality/: README.md
databases/: README.md
docs/: README.md
events/: README.md
feature-flags/: README.md
gitops/: README.md
helm/: README.md
incident/: README.md
infra/: README.md
infrastructure/: README.md
kubernetes/: README.md
load-testing/: README.md
manifests/: README.md
messaging/: README.md
ml/: README.md
networking/: README.md
observability/: README.md
openapi/: README.md
platform/: README.md
proto/: README.md  buf.gen.yaml  buf.yaml
registry/: README.md
scripts/: README.md  backup.sh  build.sh  deploy.sh  port-forward.sh  smoke.sh  (+2 more)
src/iiot/edge-agent/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
src/iiot/edge-agent/src/: main.rs
src/iiot/opc-ua-gateway/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
src/iiot/opc-ua-gateway/src/: command.rs  main.rs  opcua_client.rs  publisher.rs
src/iiot/plc-adapter/: .env.example  CMakeLists.txt  Dockerfile  Makefile  README.md
src/iiot/plc-adapter/src/: main.cpp  mqtt_publisher.cpp  mqtt_publisher.hpp  s7_driver.cpp  s7_driver.hpp
(+1672 files in other folders)
