[package]
name = "edge-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sled = "0.34"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
